# syspr-exam-prep

./: .gitignore  CMakeLists.txt  README.md
assessment1/abfile/: abcfile  abcfile.c
assessment1/buf_w/: buf_w.c
assessment1/count/: count.c
assessment1/countdown/: countdown.c
assessment1/domino/: domino.c
assessment1/exec/: hello
assessment1/pos/: pos.c
assessment1/shuffle/: shuffle.c
assessment1/threadrace/: threadrace.c
assessment2/addN/: addN.c
assessment2/ago/: ago.c  ago_kurz.c
assessment2/checkin/: checkin.c
assessment2/dogbdy/: dogbday.c
assessment2/eat/: eat.c
assessment2/len/: hello.c  len.c
assessment2/mq_carousel/: mq_carousel.c
assessment2/my_sem/: my_sem.c
assessment2/sd/: sd.c
assessment2/secChild/: secChild.c
assessment2/sockets/: sockets.c
assessment2/sum/: sum.c
assessment2/udp2tcp/: udp2tcp.c
buf_w/: buf_w.c  my.db
countdown/: countdown.c
exec/: exec.c  hello.c
ignoreN/: ignoreN.c
max/: max.c
node/: node.c
palindrome/: palindrome.c
patch/: patch.c
producerConsumer/: producerConsumer.c
socketpair/: socketpair.c
