add_executable(new_target ignoreN/ignoreN.c
        domino/domino.c
        abfile/abcfile.c
        node/node.c
        shuffle/shuffle.c
        threadrace/threadrace.c
        palindrome/palindrome.c
        buf_w/buf_w.c
        countdown/countdown.c
        max/max.c
        patch/patch.c
        count/count.c)
