add_executable(new_target ignoreN/ignoreN.c
        domino/domino.c
        abfile/abcfile.c
        node/node.c
        shuffle/shuffle.c
        threadrace/threadrace.c
        palindrome/palindrome.c
        buf_w/buf_w.c
        countdown/countdown.c
        max/max.c
        patch/patch.c
        count/count.c
        exec/exec.c
        exec/hello.c
        pos/pos.c
        producerConsumer/producerConsumer.c
        assessment2/addN/addN.c
        assessment2/socketpair/socketpair.c
        assessment2/checkin/checkin.c
        assessment2/secChild/secChild.c
        assessment2/len/len.c
        assessment2/udp2tcp/udp2tcp.c
        assessment2/mq_carousel/mq_carousel.c
        assessment2/dogbdy/dogbday.c)
