add_executable(new_target assessment1/ignoreN/ignoreN.c
        assessment1/domino/domino.c
        assessment1/abfile/abcfile.c
        assessment1/node/node.c
        assessment1/shuffle/shuffle.c
        assessment1/threadrace/threadrace.c
        assessment1/palindrome/palindrome.c
        assessment1/buf_w/buf_w.c
        assessment1/countdown/countdown.c
        assessment1/max/max.c
        assessment1/patch/patch.c
        assessment1/count/count.c
        assessment1/exec/exec.c
        assessment1/exec/hello.c
        assessment1/pos/pos.c
        assessment1/producerConsumer/producerConsumer.c
        assessment2/addN/addN.c
        assessment2/socketpair/socketpair.c
        assessment2/checkin/checkin.c
        assessment2/secChild/secChild.c
        assessment2/len/len.c
        assessment2/udp2tcp/udp2tcp.c
        assessment2/mq_carousel/mq_carousel.c
        assessment2/dogbdy/dogbday.c
        assessment2/sum/sum.c
        assessment2/sd/sd.c
        assessment2/eat/eat.c
        assessment2/my_sem/my_sem.c
        assessment2/ago/ago.c
        assessment2/ago/ago_kurz.c)
